--- a/locales/en.json
+++ b/locales/en.json
@@ -1,201 +1,202 @@
 {
-    "Go back": "Go back",
-    "Minimize": "Minimize",
-    "Toggle fullscreen": "Toggle fullscreen",
-    "Close Flixtor": "Close Flixtor",
-    "You are about to close the application. Are you sure you want to continue?": "You are about to close the application.<br>Are you sure you want to continue?",
-    "Confirm close": "Confirm close",
-    "Ok": "Ok",
-    "No": "No",
-    "Quit": "Quit",
-    "Movies": "Movies",
-    "Series": "Series",
-    "Movie title or magnet link...": "Movie title or magnet link...",
-    "All": "All",
-    "Action": "Action",
-    "Adventure": "Adventure",
-    "Animation": "Animation",
-    "Comedy": "Comedy",
-    "Crime": "Crime",
-    "Documentary": "Documentary",
-    "Drama": "Drama",
-    "Family": "Family",
-    "Fantasy": "Fantasy",
-    "Film-Noir": "Film-Noir",
-    "History": "History",
-    "Horror": "Horror",
-    "Music": "Music",
-    "Mystery": "Mystery",
-    "Romance": "Romance",
-    "Sci-Fi": "Sci-Fi",
-    "Thriller": "Thriller",
-    "Western": "Western",
-    "War": "War",
-    "Musical": "Musical",
-    "Sport": "Sport",
-    ": Any": ": Any",
-    "Date": "Date",
-    "Year": "Year",
-    "Rating": "Rating",
-    "Alphabetic": "Alphabetic",
-    "Play": "Play",
-    "Trailer": "Trailer",
-    "Torrents": "Torrents",
-    "Favorites": "Favorites",
-    "Most downloaded": "Most downloaded",
-    "Science-Fiction": "Science-Fiction",
-    "": "",
-    "Indie": "Indie",
-    "Suspense": "Suspense",
-    "Serie title...": "Serie title...",
-    "Children": "Children",
-    "Game Show": "Game Show",
-    "Home and Garden": "Home and Garden",
-    "Mini Series": "Mini Series",
-    "News": "News",
-    "Reality": "Reality",
-    "Soap": "Soap",
-    "Special Interest": "Special Interest",
-    "Talk Show": "Talk Show",
-    "Updated": "Updated",
-    "Name": "Name",
-    "Episode list": "Episode list",
-    "episode": "episode",
-    "season": "season",
-    "seasons": "seasons",
-    "Ended": "Ended",
-    "Continuing": "Continuing",
-    "Connecting": "Connecting",
-    "Loading from source": "Loading from source",
-    "Cancel": "Cancel",
-    "Source": "Source",
-    "Quality": "Quality",
-    "An error has occured": "An error has occured",
-    "The video player is unable to start the video. You can switch to VLC or select another source from the list.": "The video player is unable to start the video. You can switch to VLC or select another source from the list.",
-    "Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)",
-    "Switch to VLC": "Switch to VLC",
-    "Info": "Info",
-    "Switch to Default player": "Switch to Default player",
-    "No sound is playing from the video? You can try using VLC before selecting another source.": "No sound is playing from the video? You can try using VLC before selecting another source.",
-    "Buffering": "Buffering",
-    "You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.",
-    "Play episode": "Play episode",
-    "Source info": "Source info",
-    "Stop download": "Stop download",
-    "Episodes": "Episodes",
-    "Season": "Season",
-    "Episode": "Episode",
-    "selected": "selected",
-    "Torrent name...": "Torrent name...",
-    "Seeds": "Seeds",
-    "Leechs": "Leechs",
-    "Lates": "Lates",
-    "Size": "Size",
-    "Anime": "Anime",
-    "Videos": "Videos",
-    "Latest": "Latest",
-    "Added date": "Added date",
-    "Torrent name": "Torrent name",
-    "Settings": "Settings",
-    "Science Fiction": "Science Fiction",
-    "Default settings:": "Default settings:",
-    "Advanced settings:": "Advanced settings:",
-    "Language:": "Language:",
-    "Streaming port:": "Streaming port:",
-    "Data directory:": "Data directory:",
-    "Clear data on close:": "Clear data on close:",
-    "Connection limit:": "Connection limit:",
-    "Prefered subtitle:": "Prefered subtitle:",
-    "Restore defaults": "Restore defaults",
-    "Saved": "Saved",
-    "Restored": "Restored",
-    "All seasons": "All seasons",
-    "Buy": "Buy",
-    "DHT:": "DHT:",
-    "Random": "Random",
-    "Cut": "Cut",
-    "Copy": "Copy",
-    "Paste": "Paste",
-    "3D": "3D",
-    "Serie title or magnet link...": "Serie title or magnet link...",
-    "popularity": "popularity",
-    "rank": "rank",
-    ": All": ": All",
-    "Popularity": "Popularity",
-    "Rank": "Rank",
-    "TV": "TV",
-    "Anime title or magnet link...": "Anime title or magnet link...",
-    "Movie": "Movie",
-    "A": "A",
-    "c": "c",
-    "t": "t",
-    "i": "i",
-    "o": "o",
-    "Supernatural": "Supernatural",
-    "Mecha": "Mecha",
-    "Shounen": "Shounen",
-    "Military": "Military",
-    "Super Power": "Super Power",
-    "Parody": "Parody",
-    "School": "School",
-    "Slice of Life": "Slice of Life",
-    "Cars": "Cars",
-    "Dementia": "Dementia",
-    "Demons": "Demons",
-    "Ecchi": "Ecchi",
-    "Game": "Game",
-    "Harem": "Harem",
-    "Historical": "Historical",
-    "Josei": "Josei",
-    "Kids": "Kids",
-    "Magic": "Magic",
-    "Martial Arts": "Martial Arts",
-    "Police": "Police",
-    "Psychological": "Psychological",
-    "Samurai": "Samurai",
-    "Seinen": "Seinen",
-    "Shoujo": "Shoujo",
-    "Shoujo Ai": "Shoujo Ai",
-    "Shounen Ai": "Shounen Ai",
-    "Space": "Space",
-    "Vampire": "Vampire",
-    "Animes": "Animes",
-    "OVA": "OVA",
-    "ONA": "ONA",
-    "Not Airing": "Not Airing",
-    "Currently Airing": "Currently Airing",
-    "name": "name",
-    "Movies metadata provider:": "Movies metadata provider:",
-    "Movies metadata:": "Movies metadata:",
-    "Movie metadata:": "Movie metadata:",
-    "A new Flixtor release is available. You can directly download it": "A new Flixtor release is available. You can directly download it",
-    "here": "here",
-    "New Flixtor version": "New Flixtor version",
-    "Eztv is unavailable. Please try it again later": "Eztv is unavailable. Please try it again later",
-    "Trakt service is unavailable. Please try it again later": "Trakt service is unavailable. Please try it again later",
-    "Player settings:": "Player settings:",
-    "Custom subtitle color:": "Custom subtitle color:",
-    "Colorpicker": "Colorpicker",
-    "Yts api endpoint:": "Yts api endpoint:",
-    "Yts is unavailable. Please try it again later": "Yts is unavailable. Please try it again later",
-    "Eztv api endpoint:": "Eztv api endpoint:",
-    "Kickass api endpoint:": "Kickass api endpoint:",
-    "Clear cache": "Clear cache",
-    "drama": "drama",
-    "mystery": "mystery",
-    "thriller": "thriller",
-    "adventure": "adventure",
-    "fantasy": "fantasy",
-    "science-fiction": "science-fiction",
-    "action": "action",
-    "crime": "crime",
-    "animation": "animation",
-    "comedy": "comedy",
-    "family": "family",
-    "romance": "romance",
-    "horror": "horror",
-    "documentary": "documentary",
-    "war": "war",
-    "music": "music",
-    "history": "history"
+	"Go back": "Go back",
+	"Minimize": "Minimize",
+	"Toggle fullscreen": "Toggle fullscreen",
+	"Close Flixtor": "Close Flixtor",
+	"You are about to close the application. Are you sure you want to continue?": "You are about to close the application.<br>Are you sure you want to continue?",
+	"Confirm close": "Confirm close",
+	"Ok": "Ok",
+	"No": "No",
+	"Quit": "Quit",
+	"Movies": "Movies",
+	"Series": "Series",
+	"Movie title or magnet link...": "Movie title or magnet link...",
+	"All": "All",
+	"Action": "Action",
+	"Adventure": "Adventure",
+	"Animation": "Animation",
+	"Comedy": "Comedy",
+	"Crime": "Crime",
+	"Documentary": "Documentary",
+	"Drama": "Drama",
+	"Family": "Family",
+	"Fantasy": "Fantasy",
+	"Film-Noir": "Film-Noir",
+	"History": "History",
+	"Horror": "Horror",
+	"Music": "Music",
+	"Mystery": "Mystery",
+	"Romance": "Romance",
+	"Sci-Fi": "Sci-Fi",
+	"Thriller": "Thriller",
+	"Western": "Western",
+	"War": "War",
+	"Musical": "Musical",
+	"Sport": "Sport",
+	": Any": ": Any",
+	"Date": "Date",
+	"Year": "Year",
+	"Rating": "Rating",
+	"Alphabetic": "Alphabetic",
+	"Play": "Play",
+	"Trailer": "Trailer",
+	"Torrents": "Torrents",
+	"Favorites": "Favorites",
+	"Most downloaded": "Most downloaded",
+	"Science-Fiction": "Science-Fiction",
+	"": "",
+	"Indie": "Indie",
+	"Suspense": "Suspense",
+	"Serie title...": "Serie title...",
+	"Children": "Children",
+	"Game Show": "Game Show",
+	"Home and Garden": "Home and Garden",
+	"Mini Series": "Mini Series",
+	"News": "News",
+	"Reality": "Reality",
+	"Soap": "Soap",
+	"Special Interest": "Special Interest",
+	"Talk Show": "Talk Show",
+	"Updated": "Updated",
+	"Name": "Name",
+	"Episode list": "Episode list",
+	"episode": "episode",
+	"season": "season",
+	"seasons": "seasons",
+	"Ended": "Ended",
+	"Continuing": "Continuing",
+	"Connecting": "Connecting",
+	"Loading from source": "Loading from source",
+	"Cancel": "Cancel",
+	"Source": "Source",
+	"Quality": "Quality",
+	"An error has occured": "An error has occured",
+	"The video player is unable to start the video. You can switch to VLC or select another source from the list.": "The video player is unable to start the video. You can switch to VLC or select another source from the list.",
+	"Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)": "Note: If you switch to VLC and you get 'Couldn't load plug-in.' You will need to install the latest version of VLC (Web plugin)",
+	"Switch to VLC": "Switch to VLC",
+	"Info": "Info",
+	"Switch to Default player": "Switch to Default player",
+	"No sound is playing from the video? You can try using VLC before selecting another source.": "No sound is playing from the video? You can try using VLC before selecting another source.",
+	"Buffering": "Buffering",
+	"You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.": "You can also select the source you want at the bottom in the source section. This is particaly useful if you are unable to play from default source.",
+	"Play episode": "Play episode",
+	"Source info": "Source info",
+	"Stop download": "Stop download",
+	"Episodes": "Episodes",
+	"Season": "Season",
+	"Episode": "Episode",
+	"selected": "selected",
+	"Torrent name...": "Torrent name...",
+	"Seeds": "Seeds",
+	"Leechs": "Leechs",
+	"Lates": "Lates",
+	"Size": "Size",
+	"Anime": "Anime",
+	"Videos": "Videos",
+	"Latest": "Latest",
+	"Added date": "Added date",
+	"Torrent name": "Torrent name",
+	"Settings": "Settings",
+	"Science Fiction": "Science Fiction",
+	"Default settings:": "Default settings:",
+	"Advanced settings:": "Advanced settings:",
+	"Language:": "Language:",
+	"Streaming port:": "Streaming port:",
+	"Data directory:": "Data directory:",
+	"Clear data on close:": "Clear data on close:",
+	"Connection limit:": "Connection limit:",
+	"Prefered subtitle:": "Prefered subtitle:",
+	"Restore defaults": "Restore defaults",
+	"Saved": "Saved",
+	"Restored": "Restored",
+	"All seasons": "All seasons",
+	"Buy": "Buy",
+	"DHT:": "DHT:",
+	"Random": "Random",
+	"Cut": "Cut",
+	"Copy": "Copy",
+	"Paste": "Paste",
+	"3D": "3D",
+	"Serie title or magnet link...": "Serie title or magnet link...",
+	"popularity": "popularity",
+	"rank": "rank",
+	": All": ": All",
+	"Popularity": "Popularity",
+	"Rank": "Rank",
+	"TV": "TV",
+	"Anime title or magnet link...": "Anime title or magnet link...",
+	"Movie": "Movie",
+	"A": "A",
+	"c": "c",
+	"t": "t",
+	"i": "i",
+	"o": "o",
+	"Supernatural": "Supernatural",
+	"Mecha": "Mecha",
+	"Shounen": "Shounen",
+	"Military": "Military",
+	"Super Power": "Super Power",
+	"Parody": "Parody",
+	"School": "School",
+	"Slice of Life": "Slice of Life",
+	"Cars": "Cars",
+	"Dementia": "Dementia",
+	"Demons": "Demons",
+	"Ecchi": "Ecchi",
+	"Game": "Game",
+	"Harem": "Harem",
+	"Historical": "Historical",
+	"Josei": "Josei",
+	"Kids": "Kids",
+	"Magic": "Magic",
+	"Martial Arts": "Martial Arts",
+	"Police": "Police",
+	"Psychological": "Psychological",
+	"Samurai": "Samurai",
+	"Seinen": "Seinen",
+	"Shoujo": "Shoujo",
+	"Shoujo Ai": "Shoujo Ai",
+	"Shounen Ai": "Shounen Ai",
+	"Space": "Space",
+	"Vampire": "Vampire",
+	"Animes": "Animes",
+	"OVA": "OVA",
+	"ONA": "ONA",
+	"Not Airing": "Not Airing",
+	"Currently Airing": "Currently Airing",
+	"name": "name",
+	"Movies metadata provider:": "Movies metadata provider:",
+	"Movies metadata:": "Movies metadata:",
+	"Movie metadata:": "Movie metadata:",
+	"A new Flixtor release is available. You can directly download it": "A new Flixtor release is available. You can directly download it",
+	"here": "here",
+	"New Flixtor version": "New Flixtor version",
+	"Eztv is unavailable. Please try it again later": "Eztv is unavailable. Please try it again later",
+	"Trakt service is unavailable. Please try it again later": "Trakt service is unavailable. Please try it again later",
+	"Player settings:": "Player settings:",
+	"Custom subtitle color:": "Custom subtitle color:",
+	"Colorpicker": "Colorpicker",
+	"Yts api endpoint:": "Yts api endpoint:",
+	"Yts is unavailable. Please try it again later": "Yts is unavailable. Please try it again later",
+	"Eztv api endpoint:": "Eztv api endpoint:",
+	"Kickass api endpoint:": "Kickass api endpoint:",
+	"Clear cache": "Clear cache",
+	"drama": "drama",
+	"mystery": "mystery",
+	"thriller": "thriller",
+	"adventure": "adventure",
+	"fantasy": "fantasy",
+	"science-fiction": "science-fiction",
+	"action": "action",
+	"crime": "crime",
+	"animation": "animation",
+	"comedy": "comedy",
+	"family": "family",
+	"romance": "romance",
+	"horror": "horror",
+	"documentary": "documentary",
+	"war": "war",
+	"music": "music",
+	"history": "history",
+	"tv-movie": "tv-movie"
 }
