--- a/locales/en.json
+++ b/locales/en.json
@@ -198,5 +198,7 @@
 	"war": "war",
 	"music": "music",
 	"history": "history",
-	"tv-movie": "tv-movie"
+	"tv-movie": "tv-movie",
+	"returning series": "returning series",
+	"western": "western"
 }
