Fix torrent sectin and missing series covers

--- a/locales/en.json
+++ b/locales/en.json
@@ -134,5 +134,6 @@
 	"war": "war",
 	"western": "western",
 	"music": "music",
-	"history": "history"
+	"history": "history",
+	"returning series": "returning series"
 }
