--- a/locales/en.json
+++ b/locales/en.json
@@ -200,5 +200,6 @@
 	"history": "history",
 	"tv-movie": "tv-movie",
 	"returning series": "returning series",
-	"western": "western"
+	"western": "western",
+	"Science-fiction": "Science-fiction"
 }
